--- a/requirements.txt
+++ b/requirements.txt
@@ -1,42 +1,88 @@
-africastalking==1.2.9
-amqp==5.3.1
-asgiref==3.8.1
-better-profanity==0.7.0
-billiard==4.2.1
-celery==5.4.0
-certifi==2025.1.31
-cffi==1.17.1
-charset-normalizer==3.4.1
-click==8.1.8
-click-didyoumean==0.3.1
-click-plugins==1.1.1
-click-repl==0.3.0
-cryptography==44.0.2
-Django==5.1.7
-django-cors-headers==4.7.0
-django-graphql-jwt==0.4.0
-djangorestframework==3.16.0
-djangorestframework_simplejwt==5.5.0
-graphene==3.4.3
-graphene-django==3.2.3
-graphql-core==3.2.6
-graphql-relay==3.2.0
-idna==3.10
-kombu==5.5.1
-pillow==11.2.1
-promise==2.3
-prompt_toolkit==3.0.50
-pycparser==2.22
-PyJWT==2.9.0
-python-dateutil==2.9.0.post0
-requests==2.32.3
-schema==0.7.7
-sightengine==1.4.0
-six==1.17.0
-sqlparse==0.5.3
-text-unidecode==1.3
-typing_extensions==4.13.0
-tzdata==2025.1
-urllib3==2.3.0
-vine==5.1.0
-wcwidth==0.2.13
+acme==2.9.0
+asgiref==3.7.2
+attrs==23.2.0
+Babel==2.10.3
+bcc==0.29.1
+bcrypt==3.2.2
+blinker==1.7.0
+Brlapi==0.8.5
+certbot==2.9.0
+certifi==2023.11.17
+chardet==5.2.0
+click==8.1.6
+cloud-init==25.2
+colorama==0.4.6
+command-not-found==0.3
+ConfigArgParse==1.7
+configobj==5.0.8
+cryptography==41.0.7
+cupshelpers==1.0
+dbus-python==1.3.2
+defer==1.0.6
+distro==1.9.0
+distro-info==1.7+build1
+Django==4.2.11
+dnspython==2.6.1
+duplicity==2.1.4
+fasteners==0.18
+gyp==0.1
+httplib2==0.20.4
+idna==3.6
+Jinja2==3.1.2
+josepy==1.14.0
+jsonpatch==1.32
+jsonpointer==2.0
+jsonschema==4.10.3
+language-selector==0.1
+launchpadlib==1.11.0
+lazr.restfulclient==0.14.6
+lazr.uri==1.0.6
+louis==3.29.0
+Mako==1.3.2.dev0
+markdown-it-py==3.0.0
+MarkupSafe==2.1.5
+mdurl==0.1.2
+monotonic==1.6
+netaddr==0.8.0
+oauthlib==3.2.2
+olefile==0.46
+paramiko==2.12.0
+parsedatetime==2.6
+pexpect==4.9.0
+pillow==10.2.0
+ptyprocess==0.7.0
+pycairo==1.25.1
+pycups==2.0.1
+Pygments==2.17.2
+PyGObject==3.48.2
+PyICU==2.12
+PyJWT==2.7.0
+PyNaCl==1.5.0
+pyOpenSSL==23.2.0
+pyparsing==3.1.1
+pyRFC3339==1.1
+pyrsistent==0.20.0
+pyserial==3.5
+python-apt==2.7.7+ubuntu5
+python-dateutil==2.8.2
+python-debian==0.1.49+ubuntu2
+pytz==2024.1
+pyxdg==0.28
+PyYAML==6.0.1
+requests==2.31.0
+rich==13.7.1
+setuptools==68.1.2
+six==1.16.0
+sqlparse==0.4.4
+systemd-python==235
+typing_extensions==4.10.0
+ubuntu-drivers-common==0.0.0
+ubuntu-pro-client==8001
+ufw==0.36.2
+unattended-upgrades==0.1
+urllib3==2.0.7
+usb-creator==0.3.16
+wadllib==1.3.6
+wheel==0.42.0
+xdg==5
+xkit==0.0.0
