--- a/.gitignore
+++ b/.gitignore
@@ -148,6 +148,7 @@ yarn-error.log*
 .codacy/
 .github/instructions/
 .marscode/
+.marscode
 
 
 nginx/ssl/                     # SSL certificate directory
