--- a/requirements.txt
+++ b/requirements.txt
@@ -1,99 +1,89 @@
-<<<<<<< HEAD
-africastalking==1.2.6
-amqp==5.3.1
-asgiref==3.7.2
-attrs==25.4.0
+africastalking
+asgiref
+attrs
 autobahn==25.10.2
-Automat==25.4.16
-=======
-amqp==5.3.1
+Automat
+amqp
 asgiref==3.10.0
->>>>>>> 07704f31ba1d5ac22742df13d997deba025d450c
-better-profanity==0.7.0
+better-profanit
 billiard==4.2.2
 celery==5.5.3
 certifi==2025.11.12
 cffi==2.0.0
-<<<<<<< HEAD
-channels==4.0.0
+channels
 channels-redis==4.1.0
-=======
 channels==4.3.1
->>>>>>> 07704f31ba1d5ac22742df13d997deba025d450c
 charset-normalizer==3.4.4
 click==8.3.0
 click-didyoumean==0.3.1
-click-plugins==1.1.1.2
-click-repl==0.3.0
-<<<<<<< HEAD
+click-plugins
+click-repl
 colorama==0.4.6
 constantly==23.10.4
 cron_descriptor==2.0.6
-cryptography==41.0.7
+cryptography
 daphne==4.0.0
-Django==4.2.11
+Django
 django-celery-beat==2.5.0
-django-cors-headers==4.3.1
-django-graphql-jwt==0.4.0
-django-timezone-field==7.1
-djangorestframework==3.14.0
-djangorestframework-simplejwt==5.3.1
+django-cors-headers
+django-graphql-jwt
+django-timezone-field
+djangorestframework
+djangorestframework-simplejwt
 graphene==3.4.3
-graphene-django==3.2.0
-graphql-core==3.2.7
+graphene-django
+graphql-core
 graphql-relay==3.2.0
-gunicorn==21.2.0
+gunicorn
 hyperlink==21.0.0
 idna==3.11
 incremental==24.7.2
-kombu==5.5.4
-msgpack==1.1.2
-packaging==25.0
-pillow==10.2.0
+msgpack
+packaging
+pillow
 promise==2.3
-prompt_toolkit==3.0.52
+prompt_toolkit
 psycopg2-binary==2.9.9
-pyasn1==0.6.1
+pyasn1
 pyasn1_modules==0.4.2
 pycparser==2.23
-PyJWT==2.7.0
+PyJWT
 pyOpenSSL==25.1.0
 python-crontab==3.3.0
-python-dateutil==2.8.2
-python-dotenv==1.0.0
-pytz==2024.1
-redis==5.0.1
+python-dateutil
+python-dotenv
+pytz
+redis
 requests==2.31.0
-schema==0.7.8
-service-identity==24.2.0
-setuptools==80.9.0
-sightengine==1.4.0
+schema
+service-identity
+setuptools
+sightengine
 six==1.17.0
 sqlparse==0.5.3
-text-unidecode==1.3
-Twisted==25.5.0
-txaio==25.9.2
-=======
-cron_descriptor==2.0.6
+text-unidecode
+Twisted
+txaio
+cron_descriptor
 cryptography==46.0.3
 Django==5.2.8
-django-celery-beat==2.8.1
-django-cors-headers==4.9.0
+django-celery-beat
+django-cors-headers
 django-timezone-field==7.1
-djangorestframework==3.16.1
-djangorestframework_simplejwt==5.5.1
-dotenv==0.9.9
-graphene==3.4.3
-graphene-django==3.2.3
-graphql-core==3.2.7
+djangorestframework
+djangorestframework_simplejwt
+dotenv
+graphene
+graphene-django
+graphql-core
 graphql-relay==3.2.0
 idna==3.11
-kombu==5.5.4
-lia-web==0.2.3
+kombu
+lia-web
 packaging==25.0
 promise==2.3
 prompt_toolkit==3.0.52
-pycparser==2.23
+pycparser
 PyJWT==2.10.1
 python-crontab==3.3.0
 python-dateutil==2.9.0.post0
@@ -103,16 +93,12 @@ requests==2.32.5
 sightengine==1.4.0
 six==1.17.0
 sqlparse==0.5.3
-strawberry-graphql==0.285.0
+strawberry-graphql
 text-unidecode==1.3
->>>>>>> 07704f31ba1d5ac22742df13d997deba025d450c
 typing_extensions==4.15.0
-tzdata==2025.2
+tzdata
 urllib3==2.5.0
 vine==5.1.0
-<<<<<<< HEAD
 wcwidth==0.2.14
 zope.interface==8.1
-=======
-wcwidth==0.2.14
->>>>>>> 07704f31ba1d5ac22742df13d997deba025d450c
+wcwidth
