--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -2,7 +2,6 @@ services:
   # PostgreSQL Database
   db:
     image: postgres:15
-    container_name: openspace_db_dev
     volumes:
       - postgres_data_dev:/var/lib/postgresql/data
     env_file:
@@ -20,7 +19,6 @@ services:
   # Redis for Celery and Channels
   redis:
     image: redis:7-alpine
-    container_name: openspace_redis_dev
     ports:
       - "6380:6379"
     healthcheck:
@@ -35,8 +33,8 @@ services:
   web:
     build:
       context: .
-      dockerfile: Dockerfile.dev
-    container_name: openspace_web_dev
+      dockerfile: Dockerfile
+      target: dev
     command: python manage.py runserver 0.0.0.0:8000
     volumes:
       - .:/app
@@ -71,8 +69,8 @@ services:
   celery:
     build:
       context: .
-      dockerfile: Dockerfile.dev
-    container_name: openspace_celery_dev
+      dockerfile: Dockerfile
+      target: dev
     command: celery -A openspace worker --loglevel=info --pool=solo
     volumes:
       - .:/app
@@ -99,8 +97,8 @@ services:
   celery-beat:
     build:
       context: .
-      dockerfile: Dockerfile.dev
-    container_name: openspace_celery_beat_dev
+      dockerfile: Dockerfile
+      target: dev
     command: celery -A openspace beat --loglevel=info
     volumes:
       - .:/app
