--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,16 +1,18 @@
 upstream django {
+    # Match the port Gunicorn actually binds to (use 8000)
     server web:8000;
 }
 
 server {
     listen 80;
-    server_name localhost;
-    return 301 https://$server_name$request_uri;
+    # Use $host so redirect keeps the hostname/ip client used
+    server_name _;
+    return 301 https://$host$request_uri;
 }
 
 server {
     listen 443 ssl;
-    server_name localhost;
+    server_name _;
 
     ssl_certificate /etc/nginx/ssl/cert.pem;
     ssl_certificate_key /etc/nginx/ssl/key.pem;
@@ -18,27 +20,28 @@ server {
     client_max_body_size 50M;
     charset utf-8;
 
-    # Security headers
     add_header X-Frame-Options "DENY";
     add_header X-Content-Type-Options "nosniff";
     add_header X-XSS-Protection "1; mode=block";
     add_header Strict-Transport-Security "max-age=31536000";
 
-    # Serve static files
     location /static/ {
         alias /app/staticfiles/;
+        expires 30d;
+        add_header Cache-Control "public";
     }
 
     location /media/ {
         alias /app/media/;
     }
 
-    # Proxy to Django
     location / {
         proxy_pass http://django;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto https;
+        # nginx terminates TLS so tell Django it was HTTPS
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_redirect off;
     }
 }
