--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -2,16 +2,16 @@ upstream django {
     # Match the port Gunicorn actually binds to (use 8000)
     server web:8000;
 }
-
+web:8000
 server {
-    listen 8002;
+    listen 80;
     # Use $host so redirect keeps the hostname/ip client used
     server_name _;
     return 301 https://$host$request_uri;
 }
 
 server {
-    listen 443 ssl;
+    listen 444 ssl;
     server_name _;
 
     ssl_certificate /etc/nginx/ssl/cert.pem;
@@ -34,7 +34,7 @@ server {
     location /media/ {
         alias /app/media/;
     }
-
+django
     location / {
         proxy_pass http://django;
         proxy_set_header Host $host;
