--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,7 +1,7 @@
-upstream django {
-    # Match the port Gunicorn actually binds to (use 8000)
-    server web:8000;
-}
+# upstream django {
+#     # Match the port Gunicorn actually binds to (use 8000)
+#     server web:8000;
+# }
 
 server {
     listen 80;
@@ -36,7 +36,7 @@ server {
     }
 django
     location / {
-        proxy_pass http://django;
+        proxy_pass http://web:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
