--- a/nginx/conf.d/default.conf
+++ b/nginx/conf.d/default.conf
@@ -1,13 +1,8 @@
-# upstream django {
-#     # Match the port Gunicorn actually binds to (use 8000)
-#     server web:8000;
-# }
-
 server {
     listen 80;
     # Use $host so redirect keeps the hostname/ip client used
     server_name _;
-    return 301 https://$host$request_uri;
+    return 301 https://$host:444$request_uri;
 }
 
 server {
@@ -34,14 +29,15 @@ server {
     location /media/ {
         alias /app/media/;
     }
-    
+
     location / {
         proxy_pass http://web:8000;
         proxy_set_header Host $host;
         proxy_set_header X-Real-IP $remote_addr;
         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
         # nginx terminates TLS so tell Django it was HTTPS
-        proxy_set_header X-Forwarded-Proto $scheme;
+        # proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_set_header X-Forwarded-Proto https;
         proxy_redirect off;
     }
 }
