--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -6,9 +6,9 @@ services:
     volumes:
       - postgres_data_prod:/var/lib/postgresql/data
     environment:
-      - POSTGRES_DB= ${POSTGRES_DB}
-      - POSTGRES_USER= ${POSTGRES_USER}
-      - POSTGRES_PASSWORD= ${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     env_file:
       - .env.prod
     ports:
@@ -22,7 +22,7 @@ services:
       - openspace_network
     restart: always
 
-  # Redis for Celery and Channels
+  # Redis
   redis:
     image: redis:7-alpine
     container_name: openspace_redis_prod
@@ -37,30 +37,30 @@ services:
       - openspace_network
     restart: always
 
-  # Django Web Application (Production)
+  # Django Web (Gunicorn)
   web:
     build:
       context: .
       dockerfile: Dockerfile
       target: prod
     container_name: openspace_web_prod
-    command: gunicorn openspace.wsgi:application --bind 0.0.0.0:8000 --workers 4 --threads 2 --timeout 120 --access-logfile - --error-logfile -
+    command: gunicorn openspace.wsgi:application --bind 0.0.0.0:8000 --workers 4 --threads 2 --timeout 120
     volumes:
       - media_volume_prod:/app/media
       - static_volume_prod:/app/staticfiles
     environment:
       - DJANGO_ENVIRONMENT=production
       - DEBUG=False
-      - POSTGRES_DB= ${POSTGRES_DB}
-      - POSTGRES_USER= ${POSTGRES_USER}
-      - POSTGRES_PASSWORD= ${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - DB_HOST=db
       - DB_PORT=5432
       - REDIS_URL=redis://redis:6379/0
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
-      - SECRET_KEY= ${SECRET_KEY}
-      - ALLOWED_HOSTS= ${ALLOWED_HOSTS}
+      - SECRET_KEY=${SECRET_KEY}
+      - ALLOWED_HOSTS=${ALLOWED_HOSTS}
     depends_on:
       db:
         condition: service_healthy
@@ -72,26 +72,23 @@ services:
       - openspace_network
     restart: always
 
-  # Nginx Reverse Proxy
-  nginx:
-    image: nginx:alpine
-    container_name: openspace_nginx_prod
+  # NEW: Caddy Reverse Proxy
+  caddy:
+    image: caddy:latest
+    container_name: openspace_caddy_prod
+    restart: always
+    ports:
+      - "80:80"
     volumes:
-      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-      - ./nginx/conf.d:/etc/nginx/conf.d:ro
+      - ./Caddyfile:/etc/caddy/Caddyfile:ro
       - static_volume_prod:/app/staticfiles:ro
       - media_volume_prod:/app/media:ro
-      - ./nginx/ssl:/etc/nginx/ssl:ro
-    ports:
-      - "8002:80"
-      - "444:444"
     depends_on:
       - web
     networks:
       - openspace_network
-    restart: always
 
-  # Celery Worker (Production)
+  # Celery Worker
   celery:
     build:
       context: .
@@ -121,7 +118,7 @@ services:
       - openspace_network
     restart: always
 
-  # Celery Beat (Scheduler) - Production
+  # Celery Beat
   celery-beat:
     build:
       context: .
@@ -151,7 +148,7 @@ services:
       - openspace_network
     restart: always
 
-  # Flower - Celery Monitoring (Production)
+  # Flower
   flower:
     build:
       context: .
