--- a/Caddyfile
+++ b/Caddyfile
@@ -1,16 +1,29 @@
 https://95.111.247.129:555 {
-
     tls internal
 
-    reverse_proxy web:8000
-
-    handle_path /static/* {
+    # Serve static files
+    handle /static/* {
         root * /app/staticfiles
         file_server
     }
 
-    handle_path /media/* {
+    # Serve media files
+    handle /media/* {
         root * /app/media
         file_server
+    }
+
+    # Everything else goes to Django
+    handle {
+        reverse_proxy web:8000 {
+            header_up X-Forwarded-Proto {scheme}
+            header_up X-Forwarded-Host {host}
+            header_up X-Forwarded-For {remote_host}
+        }
+    }
+
+    log {
+        output file /data/caddy/access.log
+        format console
     }
 }
