--- a/Caddyfile
+++ b/Caddyfile
@@ -1,16 +1,25 @@
-http://0.0.0.0:555 {
+# Listen on port 555 for HTTPS
+:555 {
+    # Use self-signed internal TLS (browser will warn)
+    tls internal
 
-    bind 0.0.0.0
-
+    # Reverse proxy to Django Gunicorn container
     reverse_proxy web:8000
 
+    # Serve static files
     handle_path /static/* {
         root * /app/staticfiles
         file_server
     }
 
+    # Serve media files
     handle_path /media/* {
         root * /app/media
         file_server
     }
+}
+
+# Optional: HTTP redirect to HTTPS on the same port
+http://:555 {
+    redir https://{host}:555{uri}
 }
