--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -48,6 +48,8 @@ services:
     volumes:
       - media_volume_prod:/app/media
       - static_volume_prod:/app/staticfiles
+    ports:
+      -"8000:8000"
     environment:
       - DJANGO_ENVIRONMENT=production
       - DEBUG=False
