--- a/Caddyfile
+++ b/Caddyfile
@@ -3,7 +3,7 @@
     # Use self-signed internal TLS (browser will warn)
 
     # Reverse proxy to Django Gunicorn container
-    reverse_proxy web:8000
+    reverse_proxy http://95.111.247.129:8000
 
     # Serve static files
     handle_path /static/* {
