--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -74,21 +74,21 @@ services:
       - openspace_network
     restart: always
 
-  # NEW: Caddy Reverse Proxy
-  caddy:
-    image: caddy:latest
-    container_name: openspace_caddy_prod
-    restart: always
-    ports:
-      - "444:444"
-    volumes:
-      - ./Caddyfile:/etc/caddy/Caddyfile:ro
-      - static_volume_prod:/app/staticfiles:ro
-      - media_volume_prod:/app/media:ro
-    depends_on:
-      - web
-    networks:
-      - openspace_network
+  # Ngnix
+    nginx:
+      image: nginx:alpine
+      container_name: openspace_nginx_prod
+      restart: always
+      ports:
+        - "444:80"
+      volumes:
+        - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+        - static_volume_prod:/app/staticfiles:ro
+        - media_volume_prod:/app/media:ro
+      depends_on:
+        - web
+      networks:
+        - openspace_network
 
   # Celery Worker
   celery:
