--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -6,9 +6,9 @@ services:
     volumes:
       - postgres_data_prod:/var/lib/postgresql/data
     environment:
-      - POSTGRES_DB= ${POSTGRES_DB}
-      - POSTGRES_USER= ${POSTGRES_USER}
-      - POSTGRES_PASSWORD= ${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
     env_file:
       - .env.prod
     ports:
@@ -53,16 +53,16 @@ services:
     environment:
       - DJANGO_ENVIRONMENT=production
       - DEBUG=False
-      - POSTGRES_DB= ${POSTGRES_DB}
-      - POSTGRES_USER= ${POSTGRES_USER}
-      - POSTGRES_PASSWORD= ${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - DB_HOST=db
       - DB_PORT=5432
       - REDIS_URL=redis://redis:6379/0
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
-      - SECRET_KEY= ${SECRET_KEY}
-      - ALLOWED_HOSTS= ${ALLOWED_HOSTS}
+      - SECRET_KEY=${SECRET_KEY}
+      - ALLOWED_HOSTS=${ALLOWED_HOSTS}
     depends_on:
       db:
         condition: service_healthy
@@ -74,21 +74,21 @@ services:
       - openspace_network
     restart: always
 
-  # Ngnix
-    nginx:
-      image: nginx:alpine
-      container_name: openspace_nginx_prod
-      restart: always
-      ports:
-        - "444:80"
-      volumes:
-        - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
-        - static_volume_prod:/app/staticfiles:ro
-        - media_volume_prod:/app/media:ro
-      depends_on:
-        - web
-      networks:
-        - openspace_network
+  # NGINX Reverse Proxy  ✅ FIXED INDENTATION
+  nginx:
+    image: nginx:alpine
+    container_name: openspace_nginx_prod
+    restart: always
+    ports:
+      - "444:80"
+    volumes:
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+      - static_volume_prod:/app/staticfiles:ro
+      - media_volume_prod:/app/media:ro
+    depends_on:
+      - web
+    networks:
+      - openspace_network
 
   # Celery Worker
   celery:
@@ -132,9 +132,9 @@ services:
       - media_volume_prod:/app/media
     environment:
       - DEBUG=False
-      - POSTGRES_DB= ${POSTGRES_DB}
-      - POSTGRES_USER= ${POSTGRES_USER}
-      - POSTGRES_PASSWORD= ${POSTGRES_PASSWORD}
+      - POSTGRES_DB=${POSTGRES_DB}
+      - POSTGRES_USER=${POSTGRES_USER}
+      - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
       - DB_HOST=db
       - DB_PORT=5432
       - REDIS_URL=redis://redis:6379/0
@@ -180,3 +180,194 @@ volumes:
 networks:
   openspace_network:
     driver: bridge
+
+
+
+
+
+
+
+
+
+# services:
+#   # PostgreSQL Database
+#   db:
+#     image: postgres:15
+#     container_name: openspace_db_prod
+#     volumes:
+#       - postgres_data_prod:/var/lib/postgresql/data
+#     environment:
+#       - POSTGRES_DB= ${POSTGRES_DB}
+#       - POSTGRES_USER= ${POSTGRES_USER}
+#       - POSTGRES_PASSWORD= ${POSTGRES_PASSWORD}
+#     env_file:
+#       - .env.prod
+#     ports:
+#       - "5433:5432"
+#     healthcheck:
+#       test: ["CMD-SHELL", "pg_isready -U openspace_user -d openspace_prod"]
+#       interval: 10s
+#       timeout: 5s
+#       retries: 5
+#     networks:
+#       - openspace_network
+#     restart: always
+
+#   # Redis
+#   redis:
+#     image: redis:7-alpine
+#     container_name: openspace_redis_prod
+#     expose:
+#       - "6379"
+#     healthcheck:
+#       test: ["CMD", "redis-cli", "ping"]
+#       interval: 10s
+#       timeout: 5s
+#       retries: 5
+#     networks:
+#       - openspace_network
+#     restart: always
+
+#   # Django Web (Gunicorn)
+#   web:
+#     build:
+#       context: .
+#       dockerfile: Dockerfile
+#       target: prod
+#     container_name: openspace_web_prod
+#     command: gunicorn openspace.wsgi:application --bind 0.0.0.0:8000 --workers 4 --threads 2 --timeout 120
+#     volumes:
+#       - media_volume_prod:/app/media
+#       - static_volume_prod:/app/staticfiles
+#     ports:
+#       - "8000:8000"
+#     environment:
+#       - DJANGO_ENVIRONMENT=production
+#       - DEBUG=False
+#       - POSTGRES_DB= ${POSTGRES_DB}
+#       - POSTGRES_USER= ${POSTGRES_USER}
+#       - POSTGRES_PASSWORD= ${POSTGRES_PASSWORD}
+#       - DB_HOST=db
+#       - DB_PORT=5432
+#       - REDIS_URL=redis://redis:6379/0
+#       - CELERY_BROKER_URL=redis://redis:6379/0
+#       - CELERY_RESULT_BACKEND=redis://redis:6379/0
+#       - SECRET_KEY= ${SECRET_KEY}
+#       - ALLOWED_HOSTS= ${ALLOWED_HOSTS}
+#     depends_on:
+#       db:
+#         condition: service_healthy
+#       redis:
+#         condition: service_healthy
+#     env_file:
+#       - .env.prod
+#     networks:
+#       - openspace_network
+#     restart: always
+
+#   # Ngnix
+#     nginx:
+#       image: nginx:alpine
+#       container_name: openspace_nginx_prod
+#       restart: always
+#       ports:
+#         - "444:80"
+#       volumes:
+#         - ./nginx/nginx.conf:/etc/nginx/nginx.conf:ro
+#         - static_volume_prod:/app/staticfiles:ro
+#         - media_volume_prod:/app/media:ro
+#       depends_on:
+#         - web
+#       networks:
+#         - openspace_network
+
+#   # Celery Worker
+#   celery:
+#     build:
+#       context: .
+#       dockerfile: Dockerfile
+#       target: prod
+#     container_name: openspace_celery_prod
+#     command: celery -A openspace worker --loglevel=info --concurrency=4 --max-tasks-per-child=1000
+#     volumes:
+#       - media_volume_prod:/app/media
+#     environment:
+#       - DEBUG=False
+#       - POSTGRES_DB=${POSTGRES_DB}
+#       - POSTGRES_USER=${POSTGRES_USER}
+#       - POSTGRES_PASSWORD=${POSTGRES_PASSWORD}
+#       - DB_HOST=db
+#       - DB_PORT=5432
+#       - REDIS_URL=redis://redis:6379/0
+#       - CELERY_BROKER_URL=redis://redis:6379/0
+#       - CELERY_RESULT_BACKEND=redis://redis:6379/0
+#     depends_on:
+#       - db
+#       - redis
+#       - web
+#     env_file:
+#       - .env.prod
+#     networks:
+#       - openspace_network
+#     restart: always
+
+#   # Celery Beat
+#   celery-beat:
+#     build:
+#       context: .
+#       dockerfile: Dockerfile
+#       target: prod
+#     container_name: openspace_celery_beat_prod
+#     command: celery -A openspace beat --loglevel=info --scheduler django_celery_beat.schedulers:DatabaseScheduler
+#     volumes:
+#       - media_volume_prod:/app/media
+#     environment:
+#       - DEBUG=False
+#       - POSTGRES_DB= ${POSTGRES_DB}
+#       - POSTGRES_USER= ${POSTGRES_USER}
+#       - POSTGRES_PASSWORD= ${POSTGRES_PASSWORD}
+#       - DB_HOST=db
+#       - DB_PORT=5432
+#       - REDIS_URL=redis://redis:6379/0
+#       - CELERY_BROKER_URL=redis://redis:6379/0
+#       - CELERY_RESULT_BACKEND=redis://redis:6379/0
+#     depends_on:
+#       - db
+#       - redis
+#       - web
+#     env_file:
+#       - .env.prod
+#     networks:
+#       - openspace_network
+#     restart: always
+
+#   # Flower
+#   flower:
+#     build:
+#       context: .
+#       dockerfile: Dockerfile
+#       target: prod
+#     container_name: openspace_flower_prod
+#     command: celery -A openspace flower --port=5555
+#     expose:
+#       - "5555"
+#     environment:
+#       - CELERY_BROKER_URL=redis://redis:6379/0
+#       - CELERY_RESULT_BACKEND=redis://redis:6379/0
+#     depends_on:
+#       - redis
+#       - celery
+#     env_file:
+#       - .env.prod
+#     networks:
+#       - openspace_network
+#     restart: always
+
+# volumes:
+#   postgres_data_prod:
+#   media_volume_prod:
+#   static_volume_prod:
+
+# networks:
+#   openspace_network:
+#     driver: bridge
