UPDATE:just trying hosting

--- a/.env.example
+++ b/.env.example
@@ -1,34 +1,27 @@
-# ========================================
-# DJANGO CORE SETTINGS
-# ========================================
-SECRET_KEY=your-secret-key-here
-DEBUG=True
-ALLOWED_HOSTS=localhost,127.0.0.1
+# Django Settings
+SECRET_KEY=your-secret-key-change-this-to-random-string
+DEBUG=False
+DJANGO_ENVIRONMENT=production
+DJANGO_SETTINGS_MODULE=openspace.settings
+ALLOWED_HOSTS=*
 
-# ========================================
-# DATABASE CONFIGURATION
-# ========================================
-POSTGRES_DB=your_database_name
-POSTGRES_USER=your_database_user
-POSTGRES_PASSWORD=your_database_password
-DB_HOST=db
-DB_PORT=5432
+# Database
+POSTGRES_DB=openspace_db
+POSTGRES_USER=openspace_user
+POSTGRES_PASSWORD=change_this_strong_password
+DATABASE_HOST=db
+DATABASE_PORT=5432
 
-# ========================================
-# REDIS CONFIGURATION
-# ========================================
-REDIS_URL=redis://redis:6379/0
+# Redis
+REDIS_PASSWORD=change_redis_password
+REDIS_URL=redis://:change_redis_password@redis:6379/0
 
-# ========================================
-# CELERY CONFIGURATION
-# ========================================
-CELERY_BROKER_URL=redis://redis:6379/0
-CELERY_RESULT_BACKEND=redis://redis:6379/0
+# Celery
+CELERY_BROKER_URL=redis://:change_redis_password@redis:6379/0
+CELERY_RESULT_BACKEND=redis://:change_redis_password@redis:6379/1
 
-# ========================================
-# EMAIL CONFIGURATION
-# ========================================
-EMAIL_BACKEND=django.core.mail.backends.console.EmailBackend
+# Email (Optional)
+EMAIL_BACKEND=django.core.mail.backends.smtp.EmailBackend
 EMAIL_HOST=smtp.gmail.com
 EMAIL_PORT=587
 EMAIL_USE_TLS=True
@@ -36,31 +29,23 @@ EMAIL_HOST_USER=your-email@gmail.com
 EMAIL_HOST_PASSWORD=your-app-password
 DEFAULT_FROM_EMAIL=your-email@gmail.com
 
-# ========================================
-# FRONTEND & BACKEND URLS
-# ========================================
-FRONTEND_URL=http://localhost:4200
-BACKEND_URL=http://localhost:8000
-
-# ========================================
-# SMS SERVICES
-# ========================================
-# Africa's Talking
+# SMS (Optional)
 AT_USERNAME=sandbox
-AT_API_KEY=your-at-api-key
+AT_API_KEY=your-africastalking-key
+BEEM_API_KEY=your-beem-key
+BEEM_SECRET_KEY=your-beem-secret
+BEEM_SENDER_ID=OPENSPACE
 
-# Beem SMS
-BEEM_API_KEY=your-beem-api-key
-BEEM_SECRET_KEY=your-beem-secret-key
-BEEM_SENDER_ID=YOUR_SENDER_ID
+# Encryption
+FERNET_KEY=1r5qIiRHx6Jwjl1wXDxFIppfQbMCGhlW1ScTc7tmSYs=
 
-# ========================================
-# ENCRYPTION
-# ========================================
-FERNET_KEY=PfL9Ql79MdJ6NmIl8OQe7nN3eHYNN5pofJ5RCcs8BEU=
+# URLs
+FRONTEND_URL=http://YOUR_SERVER_IP
+BACKEND_URL=http://YOUR_SERVER_IP
 
-# ========================================
-# CORS SETTINGS
-# ========================================
-CORS_ALLOWED_ORIGINS=http://localhost:4200,http://127.0.0.1:4200
+# CORS (Optional - for production with domain)
+CORS_ALLOWED_ORIGINS=http://YOUR_SERVER_IP,http://localhost:4200
 
+# Gunicorn
+GUNICORN_WORKERS=4
+GUNICORN_THREADS=2
